<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/iphone15" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/img_detail"
            android:text="@string/nama_produk" />

        <TextView
            android:id="@+id/tv_detail_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#757575"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            android:text="@string/tahun_rilis" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#DDDDDD"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_year" />

        <TextView
            android:id="@+id/tv_label_specs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:text="@string/spesifikasi" />

        <TextView
            android:id="@+id/tv_value_specs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_label_specs"
            app:layout_constraintTop_toTopOf="@id/tv_label_specs"
            android:text="@string/detail_spek_di_sini" />

        <Button
            android:id="@+id/btn_open_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/buka_web_resmi"
            app:layout_constraintTop_toBottomOf="@id/tv_value_specs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>